Fix wrapping on contact data

--- a/src/assets/base.sass
+++ b/src/assets/base.sass
@@ -77,6 +77,7 @@ body
         margin-left: auto
         text-align: left
         text-transform: none
+        white-space: nowrap
         font-size: $contact-font-size
     .section
       width: 100%
